styles.css
.block-container {
    padding-top: 1rem;
}

h1 {
color: #333333;
font-weight: 700;
}

.stRadio > div {
    gap: 1rem;
}


/* --- Title Box --- */
.boxed-title {
    border: 5px solid #000000;
    padding: 0.5rem 1rem;
    border-radius: 0.0rem;
    display: inline-block;
    font-size: 2.0rem;
    font-weight: 600;
    color: #333;
    margin-bottom: 1rem;
}

